Modificar modulo lider

--- a/SCVP2/administrador/templates/inicio/administrador/registro/registro_de_administrador.html
+++ b/SCVP2/administrador/templates/inicio/administrador/registro/registro_de_administrador.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="card-body">
                                     <!-- Django Form -->
-                                    <form action="{% url 'administrador:registro_admin' %}" method="post">
+                                    <form action="{% url 'administrador:registro_de_administrador' %}" method="post">
                                         {% csrf_token %}
 
                                         <!-- Form Group (numero_empleado) -->
