--- a/SCVP2/administrador/templates/modulo_administrador.html
+++ b/SCVP2/administrador/templates/modulo_administrador.html
@@ -25,12 +25,12 @@
             <div class="row" style="align-content: center">
                 <div class="col-xl-4 mb-4">
                     <!-- Dashboard example card 3-->
-                    <a class="card lift h-100" href="{% url 'administrador:registro_empresa' %}">
+                    <a class="card lift h-100" href="{% url 'administrador:menu_empresa' %}">
                         <div class="card-body d-flex justify-content-center flex-column">
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="me-3">
 
-                                    <h5>Registro de empresa</h5>
+                                    <h5>Empresas</h5>
                                     <div class="text-muted small">Registrar a una empresa para la operación del
                                         sistema
                                     </div>
@@ -48,7 +48,7 @@
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="me-3">
 
-                                    <h5>Registro de líderes de empresa</h5>
+                                    <h5>Líderes de empresa</h5>
                                     <div class="text-muted small">Registrar cuentas de los líderes de producción</div>
                                 </div>
                               <i class="fas fa-users fa-3x text-secondary mb-3"></i>
@@ -63,7 +63,7 @@
                             <div class="d-flex align-items-center justify-content-between">
                                 <div class="me-3">
 
-                                    <h5>Registrar nuevo administrador</h5>
+                                    <h5>Administradores</h5>
                                     <div class="text-muted small">Registrar un nuevo administrador</div>
                                 </div>
                                <i class="fas fa-user-plus fa-3x text-secondary mb-3"></i>
