--- a/SCVP2/administrador/templates/panel/panel_administrador.html
+++ b/SCVP2/administrador/templates/panel/panel_administrador.html
@@ -247,8 +247,8 @@
                     <div class="collapse" id="empresa" data-bs-parent="#empresa">
                         <nav class="sidenav-menu-nested nav">
                             <a class="nav-link" href="{% url 'administrador:registro_empresa' %}">Registar empresa</a>
-                            <a class="nav-link" href="">Listado de empresas</a>
-                            <a class="nav-link" href="">Modificar empresas</a>
+                            <a class="nav-link" href="#">Listado de empresas</a>
+                            <a class="nav-link" href="#">Modificar empresas</a>
                         </nav>
                     </div>
                     {#                                <div class="sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>#}
