--- a/SCVP2/lider/templates/panel/panel_lider.html
+++ b/SCVP2/lider/templates/panel/panel_lider.html
@@ -252,7 +252,7 @@
                     </a>
                     <div class="collapse" id="collapseUtilities" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
-                            <a class="nav-link" href="#">Asignar estándares</a>
+                            <a class="nav-link" href="{% url 'lider:asignar_estandar_equipo'%}">Asignar estándares</a>
                              <a class="nav-link" href="#">Modificar estándares</a>
                         </nav>
                     </div>
@@ -265,7 +265,7 @@
                     </a>
                     <div class="collapse" id="monitoreo" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'lider:monitoreo' %}">Realizar Monitoreo</a>
+                            <a class="nav-link" href="#">Realizar Monitoreo</a>
                         </nav>
                     </div>
 
@@ -277,7 +277,7 @@
                     </a>
                     <div class="collapse" id="estadisticos" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
-                            <a class="nav-link" href="{% url 'lider:estadistico' %}">Visualizar estadisticos</a>
+                            <a class="nav-link" href="#">Visualizar estadisticos</a>
                         </nav>
                     </div>
                     <!-- Sidenav Heading (Custom)-->
@@ -289,7 +289,7 @@
                     </a>
                     <div class="collapse" id="variables" data-bs-parent="#accordionSidenav">
                         <nav class="sidenav-menu-nested nav">
-                            <a class="nav-link" href="#">Crear Variable</a>
+                            <a class="nav-link" href="{% url 'lider:variable' %}">Crear Variable</a>
                                  <a class="nav-link" href="#">Editar Variables</a>
                         </nav>
                     </div>
