--- a/SCVP2/lider/templates/producto/producto.html
+++ b/SCVP2/lider/templates/producto/producto.html
@@ -33,7 +33,7 @@
                     <div class="form-group col-md-6">
                         <label class="mb-1 mt-3" for="inputNombreProducto">Descripción del producto</label>
                         <textarea class="form-control w-100" id="inputNombreProducto" name="nombreProducto"
-                                  placeholder="Introduce el nombre del producto"></textarea>
+                                  placeholder="Introduce la descripción del producto"></textarea>
                     </div>
 
 
@@ -42,13 +42,10 @@
                             <label>Seleccione las variables del producto</label>
                             <select class="select2" multiple="multiple" data-placeholder="Select a State"
                                     style="width: 100%;">
-                                <option>Alabama</option>
-                                <option>Alaska</option>
-                                <option>California</option>
-                                <option>Delaware</option>
-                                <option>Tennessee</option>
-                                <option>Texas</option>
-                                <option>Washington</option>
+                                <option>Variable 1</option>
+                                <option>Variable 2</option>
+                                <option>Variable 3</option>
+                                 <option>Variable 4</option>
                             </select>
                         </div>
                     </div>
