--- a/SCVP2/lider/templates/variable/variable.html
+++ b/SCVP2/lider/templates/variable/variable.html
@@ -16,9 +16,9 @@
             <div class="row">
                 <div class="card-header text-center"
                      style="display: flex; align-items: center; justify-content: center">
-                    <h3 class="card-title"><i data-feather="droplet"></i>Registrar Variable</h3>
+                    <h3 class="card-title"><i data-feather="droplet" style="margin-right: 10px;"></i>Registrar Variable
+                    </h3>
                 </div>
-
                 <!-- SELECT2 EXAMPLE -->
                 <form method="post" action="">
                     <div class="form-group">
