--- a/SCVP2/lider/templates/modulo_lider.html
+++ b/SCVP2/lider/templates/modulo_lider.html
@@ -20,7 +20,7 @@
                     <div class="card-body d-flex justify-content-center flex-column">
                         <div class="d-flex align-items-center justify-content-between">
                             <div class="me-3">
-                                <h5>Registro de usuarios</h5>
+                                <h5>Usuarios</h5>
                                 <div class="text-muted small">Añadir a más lideres y operadores</div>
                             </div>
                             <i class="feather-xl text-secondary mb-3" data-feather="user-plus"></i>
@@ -47,7 +47,7 @@
 
             <div class="col-xl-4 mb-4 align-content-center">
                 <!-- Dashboard example card 3-->
-                <a class="card lift h-100" href="{% url 'lider:monitoreo' %}">
+                <a class="card lift h-100" href="#">
                     <div class="card-body d-flex justify-content-center flex-column">
                         <div class="d-flex align-items-center justify-content-between">
                             <div class="me-3">
@@ -75,7 +75,7 @@
             </div>
             <div class="col-xl-4 mb-4 align-content-center">
                 <!-- Dashboard example card 2-->
-                <a class="card lift h-100" href="{% url 'lider:estadistico' %}">
+                <a class="card lift h-100" href="#">
                     <div class="card-body d-flex justify-content-center flex-column">
                         <div class="d-flex align-items-center justify-content-between">
                             <div class="me-3">
