--- a/SCVP2/lider/templates/producto/asignar_variable_producto.html
+++ b/SCVP2/lider/templates/producto/asignar_variable_producto.html
@@ -11,19 +11,20 @@
             <div class="card-header text-center" style="display: flex; align-items: center; justify-content: center">
                 <h3 class="card-title"><i class="fas fa-sliders-h"></i> Asignar Variable</h3>
             </div>
-            <form method="post" action="{% url 'lider:asignar_var_producto' %}">
+            <form method="post" action="{% url 'lider:inicio_lider' %}">
                 {% csrf_token %}
+
                 <div class="card-body row">
                       <div class="form-group col-md-6">
                         <label class="mb-1 mt-3" for="inputNombreProducto">Nombre del producto</label>
                         <input type="text" class="form-control w-100" id="inputNombreProducto" name="nombreProducto"
-                               placeholder="Introduce el nombre del producto">
+                               placeholder="Producto 1" selected disabled>
                         <!--name="nombreProducto es el valor que se envia "-->
                     </div>
                       <div class="form-group col-md-6">
-                        <label class="mb-1 mt-3" for="inputNombreProducto">Nombre del producto</label>
+                        <label class="mb-1 mt-3" for="inputNombreProducto">Variables</label>
                         <input type="text" class="form-control w-100" id="inputNombreProducto" name="nombreProducto"
-                               placeholder="Introduce el nombre del producto">
+                               placeholder="Variable 1 Variable 2 Variable 3 "disabled>
                         <!--name="nombreProducto es el valor que se envia "-->
                     </div>
                     <div class="form-group col-md-6">
@@ -70,7 +71,7 @@
                             onclick="location.href='{% url 'lider:producto' %}'">
                         Regresar
                     </button>
-                    <button type="submit" class="btn btn-outline-primary">Siguiente</button>
+                    <button type="submit" class="btn btn-outline-primary">Guardar</button>
                 </div>
             </form>
         </div>
