Modificar asignar_variable_producto.html

--- a/SCVP2/lider/templates/producto/asignar_variable_producto.html
+++ b/SCVP2/lider/templates/producto/asignar_variable_producto.html
@@ -11,7 +11,7 @@
             <div class="card-header text-center" style="display: flex; align-items: center; justify-content: center">
                 <h3 class="card-title"><i class="fas fa-sliders-h"></i> Asignar Variable</h3>
             </div>
-            <form method="post" action="{% url 'lider:inicio_lider' %}">
+            <form method="post" action="{% url 'lider:asignar_var_producto' %}">
                 {% csrf_token %}
 
                 <div class="card-body row">
